[package]
name = "gw2-executable-loader"
version = "0.1.0"
edition = "2024"
authors = ["Deathmore.3741"]
description = "Load and run exe files as subprocesses from inside Gw2. Very useful for SteamOS/Bazzite in game mode as it launches under the same wine binary and prefix as Gw2."

[lib]
name = "gw2_executable_loader"
crate-type = ["cdylib"]

[dependencies]
retour = { version = "0.4.0-alpha.3", features = ["static-detour"] }
log = "0.4.21"
nexus = { git = "https://github.com/zerthox/nexus-rs", features = [
    "log",
    "log_filter",
    "arc",
    "hook",
    "strum",
] }
rfd = "0.15"
sysinfo = "0.36.1"

[dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",

    "Foundation_Numerics",
    "Win32_Devices_HumanInterfaceDevice",
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
