[package]
name = "gw2-executable-loader"
version = "0.1.0"
edition = "2024"
authors = ["Deathmore.3741"]
description = "Load and run exe files as subprocesses from inside Gw2. Very useful for SteamOS/Bazzite in game mode as it launches under the same wine binary and prefix as Gw2."
repository = "https://github.com/OlivierFortier/gw2-executable-loader"

[lib]
name = "gw2_executable_loader"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.21"
nexus = { git = "https://github.com/zerthox/nexus-rs", features = [
    "log",
    "log_filter",
] }
rfd = "0.15"
sysinfo = "0.36.1"
