[package]
name = "gw2_executable_runner"
version = "0.1.1"
edition = "2024"
authors = ["Deathmore.3741"]
description = "Run executable files as subprocesses from inside Gw2. Very useful for Linux users as it launches under the same wine binary and prefix as Gw2."
repository = "https://github.com/OlivierFortier/gw2-executable-runner"

[lib]
name = "gw2_executable_runner"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.21"
nexus = { git = "https://github.com/zerthox/nexus-rs", features = [
    "log",
    "log_filter",
] }
rfd = "0.15"
sysinfo = "0.36.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"